--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ chrono = { version = '*', features = ["serde"] }
 time = '*'
 open = '*'
 uuid = { version = "0.6", features = ["serde", "v4"] }
+regex = '1.0.0'
